syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package pb; // 定义了一个proto的命名空间

option go_package = "protobufv3_demo/pb";

message SearchRequest {
  string query = 1; // singular 可以设置值也可以不设置值
  int32 page_number = 2;
  reserved 3;
  int32 num = 4;
  double score = 5; // float64

  enum Corpus {
    UNIVERSAL = 0;
    WEB = 1;
    IMAGES = 2;
    LOCAL = 3;
    NEWS = 4;
    PRODUCTS = 5;
    VIDEO = 6; // 枚举值
  }
  Corpus corpus = 6; // 字段编号
  google.protobuf.Timestamp DateOfBirth = 7;
}

enum Week {
  UNKNOWN = 0;
  MONDAY = 1;
  // ...
}

message SearchResponse {
  repeated string ret = 1; // ret = ["a", "b", "c"]
  SearchRequest.Corpus corpus = 2;
  Result result = 3;
  map<string, int32> map_field = 4;         // map
  repeated google.protobuf.Any details = 5; // any
}

message Result {
  string url = 1;
  string title = 2;
  repeated string snippets = 3;
  Week week = 4;
}

message SampleMessage {
  oneof test_oneof {
    string name = 4;
    SubMessage sub_message = 9;
  }

  message SubMessage { int32 age = 1; }
}

service SearchService { rpc Search(SearchRequest) returns (SearchResponse); }
